# wordscramble-py

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/wordscramble/: __init__.py  __main__.py  cli.py  key.py  keygen.py  menus.py  scramble.py
