# A typical pyproject.toml. This allows us to install the project as a package.
# This is pretty standard for nice projects.
#
# References:
# “Writing Your Pyproject.Toml.” Writing Your Pyproject.Toml - Python Packaging User Guide,
#    15 Mar. 2025, packaging.python.org/en/latest/guides/writing-pyproject-toml/. 
# “Configuring Setuptools Using Pyproject.Toml Files.” Configuring Setuptools Using Pyproject.Toml Files - Setuptools 77.0.3.Post20250320 Documentation,
#    20 Feb. 2025, setuptools.pypa.io/en/latest/userguide/pyproject_config.html. 

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wordscramble"
authors = [
    {name = "Willow Ciesialka", email = "wciesialka@gmail.com"}
]
description = "Advanced word scrambler."
license = {file = "LICENSE"}
requires-python = ">= 3.12"
dynamic = ["version","readme","dependencies"]

[tool.setuptools.dynamic]
version = { attr = "wordscramble.__version__"}
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = {file = "requirements.txt"}

[project.urls]
Repository = "https://github.com/wciesialka/wordscramble-py"

[tool.setuptools.packages.find]
where = ["src"]
include = ["wordscramble*"]